fixed overflow for milestone and styling for nav and timeline

--- a/source/CSS/project-style.css
+++ b/source/CSS/project-style.css
@@ -26,7 +26,7 @@ body {
     padding: 10px 20px;
     width: 100%;
     border-radius: 0;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -358,6 +358,8 @@ input[type="file"] {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 .milestone-container h3 {
@@ -466,13 +468,14 @@ input[type="file"] {
 }
 
 .timeline-Wrapper {
-    position: sticky;
+    position: relative;
     bottom: 0;
     height: 20%; 
     width: 80%;
     border-radius: 20px;
     text-align: center;
     box-sizing: border-box;
+    vertical-align: bottom;
 }
 
 .timeline-container {
